{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "1fc2b1ef-bda4-4221-a073-3d95d3693b0a",
            "actions": [
                {
                    "name": "Strafe",
                    "type": "Button",
                    "id": "90839a53-cabe-4383-bd69-f3fc60b69d60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "0263f836-857c-4079-b3f4-5f7a41be0cd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "dff503f5-009f-4f92-92e8-371e027ab41a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "be894a6a-e8ff-479a-81d5-cfe5e2a04f4f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5312b220-ca50-4838-b94b-64c686144b63",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Strafe",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "559286e9-53cf-4b51-803f-419d3e334686",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9c5215f1-d1ca-456e-a35f-c643115e9f42",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d7cd334e-0866-494c-a663-e16f69b521e7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "HandActions",
            "id": "fbbb1098-19f2-4041-aa18-66f732ee555e",
            "actions": [
                {
                    "name": "UseLeftHand",
                    "type": "Button",
                    "id": "8b6dfe60-9647-4931-8a9d-c4c54c586241",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseRightHand",
                    "type": "Button",
                    "id": "eff33bf0-b3f0-41c5-a693-9abde38543d9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLeftHand",
                    "type": "Button",
                    "id": "296c2bb1-8539-4cc2-8fc4-0643cb47eb86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchRightHand",
                    "type": "Button",
                    "id": "0711d863-5428-44fa-a5bd-4cc4cfe97eb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d16efa35-9253-40f4-adcb-3934a8fe4a40",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseLeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73d724a9-ebaf-4371-aab9-71a3a9433950",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseRightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44da033b-dcf6-41ff-9192-e376a69b58d9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchLeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a21d82a4-8ebb-4419-9b84-d84c927a51c5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchRightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "ca899fdb-245e-46bc-adc3-c26e216794fc",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "4ea2e99c-832e-4439-bdc7-7573db2092d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpgradeMenu",
                    "type": "Button",
                    "id": "8ebeaa67-765f-42ef-982e-8c499e7c2690",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d99f4932-9a50-4d15-91cd-489d5584b31b",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b8fd06fe-e124-469d-83e6-bc6274aec0cd",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpgradeMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}